--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
     "styled-components": "^5.0.1",
-    "react-native-safe-area-context": "0.6.0"
+    "react-native-safe-area-context": "0.6.0",
+    "expo-linear-gradient": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
