--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "expo": "~36.0.0",
     "expo-blur": "~8.0.0",
     "expo-font": "~8.0.0",
+    "expo-linear-gradient": "~8.0.0",
     "firebase": "^7.6.1",
+    "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -19,13 +21,12 @@
     "react-native-feather1s": "^0.2.2",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-reanimated": "^1.4.0",
+    "react-native-safe-area-context": "0.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
-    "styled-components": "^5.0.1",
-    "react-native-safe-area-context": "0.6.0",
-    "expo-linear-gradient": "~8.0.0"
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
