--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-appearance": "~0.3.1",
     "react-native-feather1s": "^0.2.2",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-modal-datetime-picker": "^8.5.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-web": "~0.11.7",
