--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "uuid": "3.3.3"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
