--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
     "styled-components": "^5.0.1",
-    "uuid": "3.3.3"
+    "uuid": "3.3.3",
+    "expo-permissions": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
