--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-navigation-tabs": "^2.6.2",
     "styled-components": "^5.0.1",
     "uuid": "3.3.3",
-    "expo-permissions": "~8.0.0"
+    "expo-permissions": "~8.0.0",
+    "@react-native-community/datetimepicker": "2.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
