--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.3.0",
     "expo": "~36.0.0",
     "expo-blur": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-linear-gradient": "~8.0.0",
+    "expo-permissions": "~8.0.0",
     "firebase": "^7.6.1",
     "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-appearance": "~0.3.1",
+    "react-native-date-picker": "^2.7.8",
     "react-native-feather1s": "^0.2.2",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-modal-datetime-picker": "^8.5.1",
@@ -28,9 +31,7 @@
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
     "styled-components": "^5.0.1",
-    "uuid": "3.3.3",
-    "expo-permissions": "~8.0.0",
-    "@react-native-community/datetimepicker": "2.1.0"
+    "uuid": "3.3.3"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
