--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^2.3.0",
+    "@react-native-community/datetimepicker": "2.1.0",
     "expo": "~36.0.0",
     "expo-blur": "~8.0.0",
     "expo-font": "~8.0.0",
@@ -31,7 +31,8 @@
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
     "styled-components": "^5.0.1",
-    "uuid": "3.3.3"
+    "uuid": "3.3.3",
+    "react-native-maps": "0.26.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
