--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "react-navigation-tabs": "^2.6.2",
     "styled-components": "^5.0.1",
     "uuid": "3.3.3",
-    "react-native-maps": "0.26.1"
+    "react-native-maps": "0.26.1",
+    "expo-localization": "~8.0.0",
+    "expo-location": "~8.0.0",
+    "expo-constants": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
