--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
     "@react-native-community/datetimepicker": "2.1.0",
     "expo": "~36.0.0",
     "expo-blur": "~8.0.0",
+    "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-linear-gradient": "~8.0.0",
+    "expo-localization": "~8.0.0",
+    "expo-location": "~8.0.0",
     "expo-permissions": "~8.0.0",
     "firebase": "^7.6.1",
     "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-appearance": "~0.3.1",
+    "react-native-appearance": "^0.3.3",
     "react-native-date-picker": "^2.7.8",
     "react-native-feather1s": "^0.2.2",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-google-places-autocomplete": "^1.4.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-maps": "0.26.1",
     "react-native-modal-datetime-picker": "^8.5.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "0.6.0",
@@ -31,11 +37,7 @@
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
     "styled-components": "^5.0.1",
-    "uuid": "3.3.3",
-    "react-native-maps": "0.26.1",
-    "expo-localization": "~8.0.0",
-    "expo-location": "~8.0.0",
-    "expo-constants": "~8.0.0"
+    "uuid": "3.3.3"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
