--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-location": "~8.0.0",
     "expo-permissions": "~8.0.0",
     "firebase": "^7.6.1",
+    "klaw": "^3.0.0",
     "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
