--- a/package.json
+++ b/package.json
@@ -8,36 +8,37 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "2.1.0",
-    "expo": "~36.0.0",
-    "expo-blur": "~8.0.0",
-    "expo-constants": "~8.0.0",
-    "expo-font": "~8.0.0",
-    "expo-haptics": "~8.0.0",
-    "expo-linear-gradient": "~8.0.0",
-    "expo-localization": "~8.0.0",
-    "expo-location": "~8.0.0",
-    "expo-permissions": "~8.0.0",
-    "firebase": "7.6.1",
-    "klaw": "^3.0.0",
+    "@react-native-community/datetimepicker": "2.2.2",
+    "expo": "^37.0.8",
+    "expo-blur": "~8.1.0",
+    "expo-constants": "~9.0.0",
+    "expo-device": "~2.1.0",
+    "expo-font": "~8.1.0",
+    "expo-haptics": "~8.1.0",
+    "expo-linear-gradient": "~8.1.0",
+    "expo-localization": "~8.1.0",
+    "expo-location": "~8.1.0",
+    "expo-mail-composer": "~8.1.0",
+    "expo-permissions": "~8.1.0",
+    "firebase": "^7.9.0",
     "moment": "^2.24.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-appearance": "^0.3.3",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-appearance": "~0.3.3",
     "react-native-date-picker": "^2.7.8",
     "react-native-feather1s": "^0.2.2",
-    "react-native-gesture-handler": "^1.5.2",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-google-places-autocomplete": "^1.4.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-maps": "0.26.1",
     "react-native-modal-datetime-picker": "^8.5.1",
-    "react-native-reanimated": "^1.4.0",
-    "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
-    "react-native-svg": "9.13.3",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
+    "react-native-svg": "11.0.1",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
@@ -46,7 +47,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "~8.0.0"
+    "babel-preset-expo": "^8.1.0"
   },
   "private": true
 }
