--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^7.9.0",
     "moment": "^2.24.0",
     "react": "16.9.0",
+    "react-content-loader": "^5.0.4",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-appearance": "~0.3.3",
@@ -36,7 +37,7 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-svg": "11.0.1",
+    "react-native-svg": "^11.0.1",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
