--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-blur": "~8.1.0",
     "expo-constants": "~9.0.0",
     "expo-device": "~2.1.0",
+    "expo-firebase-recaptcha": "^1.1.0",
     "expo-font": "~8.1.0",
     "expo-haptics": "~8.1.0",
     "expo-linear-gradient": "~8.1.0",
@@ -39,7 +40,9 @@
     "react-native-screens": "~2.2.0",
     "react-native-svg": "^11.0.1",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-swiper": "^1.6.0-rc.3",
     "react-native-web": "^0.11.7",
+    "react-native-webview": "8.1.1",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
